Database Global connect

--- a/src/main/webapp/Plantilla/Plantilla.xhtml
+++ b/src/main/webapp/Plantilla/Plantilla.xhtml
@@ -39,14 +39,14 @@
                                 <p:submenu label ="Ventas" expanded="true">
                                     <p:submenu label="Ventas" icon="pi pi-dollar">
                                         <p:menuitem value="Nueva Venta"
-                                                    outcome="/Views/nuevaVenta.xhtml"/>
+                                                    outcome="/Views/Ventas/nuevaVenta.xhtml"/>
                                         <p:menuitem value="Listado Ventas"
                                                     outcome="/Views/ListadoCobros.xhtml"/>
                                     </p:submenu>
                                     
                                     <p:submenu label="Proformas" icon="pi pi-dollar">
                                         <p:menuitem value="Nueva Proforma"
-                                                    outcome="/Views/nuevaProforma.xhtml"/>
+                                                    outcome="/Views/Ventas/nuevaProforma.xhtml"/>
                                         <p:menuitem value="Listado Proformas"
                                                     outcome="/Views/ListadoCobros.xhtml"/>
                                     </p:submenu>
