--- a/src/main/webapp/Plantilla/Plantilla.xhtml
+++ b/src/main/webapp/Plantilla/Plantilla.xhtml
@@ -52,9 +52,9 @@
                                 </p:submenu>
 
                                 <p:submenu label="Información Tributaria" expanded="true">
-                                    <p:menuitem value="Generar ATS" />
-                                    <p:menuitem value="Declaración IVA" />
-                                    <p:menuitem value="Declaración RENTA" />
+                                    <p:menuitem value="Generar ATS" outcome="/Views/tributacion/generarAts.xhtml" />
+                                    <p:menuitem value="Declaración IVA" outcome="/Views/tributacion/generarIvaPeriodo.xhtml" />
+                                    <p:menuitem value="Declaración RENTA" outcome="/Views/tributacion/generarRentaPeriodo.xhtml"/>
                                 </p:submenu>
                             </p:panelMenu>
                         </h:form>
