Views folder's name changed to View

--- a/src/main/webapp/Plantilla/Plantilla.xhtml
+++ b/src/main/webapp/Plantilla/Plantilla.xhtml
@@ -39,22 +39,22 @@
                                 <p:submenu label ="Ventas" expanded="true">
                                     <p:submenu label="Ventas" icon="pi pi-dollar">
                                         <p:menuitem value="Nueva Venta"
-                                                    outcome="/Views/Ventas/nuevaVenta.xhtml"/>
+                                                    outcome="/View/Ventas/nuevaVenta.xhtml"/>
                                         <p:menuitem value="Listado Ventas"/>
                                     </p:submenu>
 
                                     <p:submenu label="Proformas" icon="pi pi-dollar">
                                         <p:menuitem value="Nueva Proforma"
-                                                    outcome="/Views/Ventas/nuevaProforma.xhtml"/>
+                                                    outcome="/View/Ventas/nuevaProforma.xhtml"/>
                                         <p:menuitem value="Listado Proformas"/>
                                     </p:submenu>
 
                                 </p:submenu>
 
                                 <p:submenu label="Información Tributaria" expanded="true">
-                                    <p:menuitem value="Generar ATS" outcome="/Views/tributacion/generarAts.xhtml" />
-                                    <p:menuitem value="Declaración IVA" outcome="/Views/tributacion/generarIvaPeriodo.xhtml" />
-                                    <p:menuitem value="Declaración RENTA" outcome="/Views/tributacion/generarRentaPeriodo.xhtml"/>
+                                    <p:menuitem value="Generar ATS" outcome="/View/tributacion/generarAts.xhtml" />
+                                    <p:menuitem value="Declaración IVA" outcome="/View/tributacion/generarIvaPeriodo.xhtml" />
+                                    <p:menuitem value="Declaración RENTA" outcome="/View/tributacion/generarRentaPeriodo.xhtml"/>
                                 </p:submenu>
                             </p:panelMenu>
                         </h:form>
